--- a/community.html
+++ b/community.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-  <h1><a href="PetinPocket.html">Pet in Pocket</a></h1>
+  <h1><a href="index.html">Pet in Pocket</a></h1>
   </header>
 
   <nav>
