--- a/info.html
+++ b/info.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-  <h1><a href="PetinPocket.html">Pet in Pocket</a></h1>
+  <h1><a href="index.html">Pet in Pocket</a></h1>
   <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
 
   </header>
