--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <h1><a href="PetinPocket.html">Pet in Pocket</a></h1>
+    <h1><a href="index.html">Pet in Pocket</a></h1>
     <div class="auth">
       <a href="#">로그인</a>
       <a href="#">회원가입</a>
