--- a/share.html
+++ b/share.html
@@ -8,24 +8,33 @@
 
 </head>
 <body>
-  <header>
-  <h1><a href="index.html">Pet in Pocket</a></h1>
-  </header>
+  <section class="share-hero">
+  <h2>물품 나눔 게시판</h2>
+  <p>필요 없는 물건, 필요한 누군가에게. 따뜻한 나눔을 실천해보세요!</p>
+</section>
 
-  <nav>
-    <a href="info.html">정보제공</a>
-    <a href="community.html">커뮤니티</a>
-    <a href="adopt.html">유기견/묘 입양</a>
-    <a href="share.html">물품 나눔</a>
-  </nav>
+<section class="share-controls">
+  <input type="text" placeholder="물품명으로 검색" class="search-bar">
+  <select class="category-filter">
+    <option>전체</option>
+    <option>사료</option>
+    <option>장난감</option>
+    <option>하우스</option>
+    <option>위생용품</option>
+  </select>
+  <button class="add-item-btn">+ 물품 등록</button>
+</section>
 
-  <main>
-    <h2>나눔 페이지</h2>
-    <p>ㅇㅇㅇㅇㅇㅇㅇㅇ</p>
-  </main>
+<section class="item-list">
+  <div class="item-card">
+    <img src="images/sample1.jpg" alt="사료 이미지">
+    <h3>강아지 사료 3kg</h3>
+    <p>서울 / 나눔중</p>
+    <button>자세히 보기</button>
+  </div>
+  <!-- 다른 카드들 반복 -->
+</section>
 
-  <footer>
-    <p>Copyright © Pet in Pocket</p>
-  </footer>
+  <p>Copyright © Pet in Pocket</p>
 </body>
 </html>
