--- a/share.html
+++ b/share.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>물품나눔 - Pet in Pocket</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="share.css">
   <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
 
 </head>
