--- a/share.html
+++ b/share.html
@@ -23,14 +23,14 @@
     <a href="share.html">물품 나눔</a>
   </nav>
 
-  <!-- 해시태그 내비 -->
-  <nav class="hashtag-nav">
-    <a href="#food">#사료</a>
-    <a href="#toy">#장난감</a>
-    <a href="#house">#하우스</a>
-    <a href="#hygiene">#위생용품</a>
-    <a href="#etc">#기타</a>
-  </nav>
+  <!-- 해시태그 버튼 내비게이션 -->
+  <div class="hashtag-container">
+    <button onclick="location.href='#food'">#사료</button>
+    <button onclick="location.href='#toy'">#장난감</button>
+    <button onclick="location.href='#house'">#하우스</button>
+    <button onclick="location.href='#hygiene'">#위생용품</button>
+    <button onclick="location.href='#etc'">#기타</button>
+  </div>
 
   <!-- 카테고리별 섹션 -->
   <section id="food" class="item-section">
