--- a/share.html
+++ b/share.html
@@ -6,6 +6,9 @@
   <title>물품 나눔 | Pet in Pocket</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="share.css">
+  <!-- 구글 폰트 추가 -->
+<link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
+
 </head>
 <body>
   <!-- 헤더 + 네비 (index.html과 동일) -->
