--- a/share.html
+++ b/share.html
@@ -32,37 +32,38 @@
     <a href="#etc">#기타</a>
   </nav>
 
+  <!-- 카테고리별 섹션 -->
   <section id="food" class="item-section">
     <h2>사료</h2>
     <div class="item-grid" data-category="food"></div>
-    <button class="more-btn" data-category="food">더보기</button>
+    <button class="more-btn" data-category="food" data-action="expand">더보기</button>
   </section>
 
   <section id="toy" class="item-section">
     <h2>장난감</h2>
     <div class="item-grid" data-category="toy"></div>
-    <button class="more-btn" data-category="toy">더보기</button>
+    <button class="more-btn" data-category="toy" data-action="expand">더보기</button>
   </section>
 
   <section id="house" class="item-section">
     <h2>하우스</h2>
     <div class="item-grid" data-category="house"></div>
-    <button class="more-btn" data-category="house">더보기</button>
+    <button class="more-btn" data-category="house" data-action="expand">더보기</button>
   </section>
 
   <section id="hygiene" class="item-section">
     <h2>위생용품</h2>
     <div class="item-grid" data-category="hygiene"></div>
-    <button class="more-btn" data-category="hygiene">더보기</button>
+    <button class="more-btn" data-category="hygiene" data-action="expand">더보기</button>
   </section>
 
   <section id="etc" class="item-section">
     <h2>기타</h2>
     <div class="item-grid" data-category="etc"></div>
-    <button class="more-btn" data-category="etc">더보기</button>
+    <button class="more-btn" data-category="etc" data-action="expand">더보기</button>
   </section>
 
-  <!-- 강아지/고양이 필터 드롭다운 -->
+  <!-- 🐾 필터: 강아지/고양이 선택 -->
   <div class="pet-filter-selector">
     <label for="pet-filter">필터:</label>
     <select id="pet-filter">
