--- a/adopt.html
+++ b/adopt.html
@@ -14,7 +14,7 @@
 
   <nav>
     <a href="info.html">정보제공</a>
-    <a href="community_free.html">커뮤니티</a>
+    <a href="community_category.html">커뮤니티</a>
     <a href="adopt.html">유기견/묘 입양</a>
     <a href="share.html">물품 나눔</a>
   </nav>
