--- a/info.html
+++ b/info.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <title>정보제공 - Pet in Pocket</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    dog {}
+  </style>
 </head>
 <body>
   <header>
@@ -22,6 +25,33 @@
 
   <main>
     <h2>정보제공 페이지</h2>
+    <br>
+    <br>
+    <p><strong href=".dog">강아지</strong>를 키울 예정이에요<t><strong href=".cat">고양이</strong>를 키울 예정이에요</p>
+    <div>
+        <h3>인간의 오랜 친구, <strong class="dog">강아지</strong></h3>
+        <ol>
+            <li>입양 전 체크리스트</li>
+            <li>데려오기 전 필수 준비물</li>
+            <li>강아지와 함께 살기</li>
+            <ol>
+                <li>독이 되는 음식</li>
+                <li>함께하는데 드는 비용</li>
+                <li>건강관리와 예방접종</li>
+            </ol>
+    </div>
+    <div>
+        <h3>도도한 매력이 사랑스러운, <strong class="cat">고양이</strong></h3>
+        <ol>
+            <li>입양 전 체크리스트</li>
+            <li>데려오기 전 필수 준비물</li>
+            <li>고양이와 함께 살기</li>
+            <ol>
+                <li>독이 되는 음식</li>
+                <li>함께하는데 드는 비용</li>
+                <li>건강관리와 예방접종</li>
+            </ol>
+    </div>
     <p>ㅇㅇㅇㅇㅇㅇㅇ</p>
   </main>
 
