--- a/info.html
+++ b/info.html
@@ -27,7 +27,7 @@
     <h2>정보제공 페이지</h2>
     <br>
     <br>
-    <p><strong href=".dog">강아지</strong>를 키울 예정이에요<t><strong href=".cat">고양이</strong>를 키울 예정이에요</p>
+    <p><strong href=".dog">강아지</strong>를 키울 예정이에요&nbsp;<strong href=".cat">고양이</strong>를 키울 예정이에요</p>
     <div>
         <h3>인간의 오랜 친구, <strong class="dog">강아지</strong></h3>
         <ol>
