--- a/info.html
+++ b/info.html
@@ -27,9 +27,9 @@
     <h2>정보제공 페이지</h2>
     <br>
     <br>
-    <p><strong href=".dog">강아지</strong>를 키울 예정이에요&nbsp;<strong href=".cat">고양이</strong>를 키울 예정이에요</p>
+    <p><strong href="#dog">강아지</strong>를 키울 예정이에요&nbsp;&nbsp;&nbsp;<strong href="#cat">고양이</strong>를 키울 예정이에요</p>
     <div>
-        <h3>인간의 오랜 친구, <strong class="dog">강아지</strong></h3>
+        <h3>인간의 오랜 친구, <strong id="dog">강아지</strong></h3>
         <ol>
             <li>입양 전 체크리스트</li>
             <li>데려오기 전 필수 준비물</li>
@@ -41,7 +41,7 @@
             </ol>
     </div>
     <div>
-        <h3>도도한 매력이 사랑스러운, <strong class="cat">고양이</strong></h3>
+        <h3>도도한 매력이 사랑스러운, <strong id="cat">고양이</strong></h3>
         <ol>
             <li>입양 전 체크리스트</li>
             <li>데려오기 전 필수 준비물</li>
