--- a/info.html
+++ b/info.html
@@ -4,7 +4,11 @@
   <meta charset="UTF-8" />
   <title>정보제공 - Pet in Pocket</title>
   <link rel="stylesheet" href="style.css" />
-  
+  <style>
+  html {
+    scroll-behavior: smooth;
+  }
+  </style>
 </head>
 <body>
   <header>
@@ -30,10 +34,42 @@
         <h3>인간의 오랜 친구, <strong id="dog">강아지</strong></h3>
         <ol>
             <li>입양 전 체크리스트</li>
+            <ul>
+                <li>강아지의 종류</li>
+                <li>입양처</li>
+                <li>입양 후 책임</li>
+                <li>입양 후 환경</li>
+                <li>입양 후 시간</li>
+                <li>입양 후 비용</li> 
+            </ul>
             <li>데려오기 전 필수 준비물</li>
+            <ul>
+                <li>강아지의 종류</li>
+                <li>입양처</li>
+                <li>입양 후 책임</li>
+                <li>입양 후 환경</li>
+                <li>입양 후 시간</li>
+                <li>입양 후 비용</li>
             <li>강아지와 함께 살기</li>
             <ol>
                 <li>독이 되는 음식</li>
+                <ul>
+                    <li>초콜릿</li>
+                    <li>양파</li>
+                    <li>마늘</li>
+                    <li>포도</li>
+                    <li>아보카도</li>
+                    <li>술</li>
+                    <li>카페인</li>
+                    <li>고양이 사료</li>
+                    <li>설탕</li>
+                    <li>우유</li>
+                    <li>생선</li>
+                    <li>소금</li>
+                    <li>버터</li>
+                    <li>아이스크림</li>
+                    <li>견과류</li>
+                </ul>
                 <li>함께하는데 드는 비용</li>
                 <li>건강관리와 예방접종</li>
             </ol>
