--- a/info.html
+++ b/info.html
@@ -9,6 +9,7 @@
   <header>
   <h1><a href="index.html">Pet in Pocket</a></h1>
   <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./info.css" />
 
   </header>
 
