--- a/info.html
+++ b/info.html
@@ -23,10 +23,7 @@
   </nav>
 
   <main>
-    <h2>정보제공 페이지</h2>
-    <br>
-    <br>
-    <p><a href="#dog">강아지</a>를 키울 예정이에요&nbsp;&nbsp;&nbsp;<a href="#cat">고양이</a>를 키울 예정이에요</p>
+    <h2><a href="#dog">강아지</a>를 키울 예정이에요&nbsp;&nbsp;&nbsp;<a href="#cat">고양이</a>를 키울 예정이에요</h2>
     <div>
         <h3>인간의 오랜 친구, <strong id="dog">강아지</strong></h3>
         <ol>
