--- a/info.html
+++ b/info.html
@@ -23,7 +23,7 @@
   </nav>
 
   <main>
-    <h2><a href="#dog">강아지</a>를 키울 예정이에요&nbsp;&nbsp;&nbsp;<a href="#cat">고양이</a>를 키울 예정이에요</h2>
+    <h2><a href="#dog">강아지</a>🐶를 키울 예정이에요&nbsp;&nbsp;&nbsp;<a href="#cat">고양이</a>🐱를 키울 예정이에요</h2>
     <br>
     <br>
     <div>
