--- a/info.html
+++ b/info.html
@@ -6,6 +6,11 @@
   <title>정보제공 - Pet in Pocket</title>
   <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./info.css" />
+  <script>
+  if (window.location.hash) {
+    history.replaceState(null, "", window.location.pathname);
+  }
+</script>
 </head>
 <body>
   <header>
