--- a/info.html
+++ b/info.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./info.css" />
   <script>
   if (window.location.hash) {
-    history.replaceState(null, "", window.location.pathname);
+    history.replaceState(null, "", window.location.https://yeonhonglee.github.io/PetinPocket/info.html);
   }
 </script>
 </head>
