--- a/info.html
+++ b/info.html
@@ -9,6 +9,7 @@
   <script>
   if (window.location.hash) {
     history.replaceState(null, "", window.location.https://yeonhonglee.github.io/PetinPocket/info.html);
+    window.scrollTo(0, 0);
   }
 </script>
 </head>
