--- a/info.html
+++ b/info.html
@@ -31,12 +31,12 @@
         <ol>
             <li>입양 전 체크리스트</li>
             <ul>
-                <li>강아지의 종류</li>
-                <li>입양처</li>
-                <li>입양 후 책임</li>
-                <li>입양 후 환경</li>
-                <li>입양 후 시간</li>
-                <li>입양 후 비용</li> 
+                <li>어떤 변화에도 끝까지 책임질 각오가 있나요?</li>
+                <li>반려동물 보험, 사료, 병원비 등 경제적 부담을 감당하실 수 있나요?</li>
+                <li>강아지를 보살피고 훈련시킬 수 있는 시간이 충분히 있나요?</li>
+                <li>강아지에게 안전한 환경이 조성되어 있나요?</li>
+                <li>강아지의 특성과 생활 습관을 고려한 선택인가요?</li>
+                <li>가족이 모두 동의한 입양인가요?</li> 
             </ul>
             <li>데려오기 전 필수 준비물</li>
             <ul>
