--- a/info.html
+++ b/info.html
@@ -29,8 +29,8 @@
     <hr>
     <div>
         <h3>인간의 오랜 친구, <strong id="dog">강아지</strong></h3>
-        <ol>
-            <li>입양 전 체크리스트</li>
+        
+            <li><b># 입양 전 체크리스트</b></li>
             <ul>
                 <li>어떤 변화에도 끝까지 책임질 각오가 있나요?</li>
                 <li>반려동물 보험, 사료, 병원비 등 경제적 부담을 감당하실 수 있나요?</li>
@@ -39,16 +39,34 @@
                 <li>강아지의 특성과 생활 습관을 고려한 선택인가요?</li>
                 <li>가족이 모두 동의한 입양인가요?</li> 
             </ul>
-            <li>데려오기 전 필수 준비물</li>
+            <li><b># 데려오기 전 필수 준비물</b></li>
             <ul>
-                <li>강아지의 종류</li>
-                <li>입양처</li>
-                <li>입양 후 책임</li>
-                <li>입양 후 환경</li>
-                <li>입양 후 시간</li>
-                <li>입양 후 비용</li>
+                <p class="text">-----가족이 되는 첫걸음-----</p>
+                <li>식기와 사료</li>
+                <li>배변패드</li>
+                <li>강아지 방석/집</li>
+                <li>간식</li>
+                <li>장난감</li>
+                <p class="text">-----외출용품-----</p>
+                <li>하네스</li>
+                <li>배변봉투</li>
+                <li>이동장</li>
+                <p class="text">-----강아지를 위한 인테리어-----</p>
+                <li>울타리와 문</li>
+                <li>미끄럼 방지 매트</li>
+                <li>강아지 계단</li>
+                <li>탈취제</li>
+                <p class="text">-----관리 용품-----</p>
+                <li>샴푸</li>
+                <li>빗</li>
+                <li>이발기</li>
+                <li>발톱깎이</li>
+                <li>귀 세정제</li>
+                <li>칫솔과 치약</li>
+                <li>물티슈</li>
+                
             </ul>
-            <li>강아지와 함께 살기</li>
+            <li><b># 강아지와 함께 살기</b></li>
             <ol>
                 <li>독이 되는 음식</li>
                 <ul>
