--- a/info.html
+++ b/info.html
@@ -30,7 +30,7 @@
     <div>
         <h3>인간의 오랜 친구, <strong id="dog">강아지</strong></h3>
         
-            <li><b># 입양 전 체크리스트</b></li>
+            <b># 입양 전 체크리스트</b>
             <ul>
                 <li>어떤 변화에도 끝까지 책임질 각오가 있나요?</li>
                 <li>반려동물 보험, 사료, 병원비 등 경제적 부담을 감당하실 수 있나요?</li>
@@ -39,7 +39,7 @@
                 <li>강아지의 특성과 생활 습관을 고려한 선택인가요?</li>
                 <li>가족이 모두 동의한 입양인가요?</li> 
             </ul>
-            <li><b># 데려오기 전 필수 준비물</b></li>
+            <b># 데려오기 전 필수 준비물</b>
             <ul>
                 <p class="text">-----가족이 되는 첫걸음-----</p>
                 <li>식기와 사료</li>
@@ -66,7 +66,7 @@
                 <li>물티슈</li>
                 
             </ul>
-            <li><b># 강아지와 함께 살기</b></li>
+            <b># 강아지와 함께 살기</b>
             <ol>
                 <li>독이 되는 음식</li>
                 <ul>
