--- a/info.html
+++ b/info.html
@@ -23,14 +23,14 @@
   </nav>
 
   <main>
-    <h2><a href="#dog">강아지</a>🐶를 키울 예정이에요&nbsp;&nbsp;&nbsp;<a href="#cat">고양이</a>🐱를 키울 예정이에요</h2>
+    <h1><a href="#dog">강아지</a>🐶를 키울 예정이에요&nbsp;&nbsp;&nbsp;<a href="#cat">고양이</a>🐱를 키울 예정이에요</h1>
     <br>
     <br>
     <hr>
     <div>
         <h3>인간의 오랜 친구, <strong id="dog">강아지</strong></h3>
         
-            <b># 입양 전 체크리스트</b>
+            <h2># 입양 전 체크리스트</h2>
             <ul>
                 <li>어떤 변화에도 끝까지 책임질 각오가 있나요?</li>
                 <li>반려동물 보험, 사료, 병원비 등 경제적 부담을 감당하실 수 있나요?</li>
@@ -39,7 +39,7 @@
                 <li>강아지의 특성과 생활 습관을 고려한 선택인가요?</li>
                 <li>가족이 모두 동의한 입양인가요?</li> 
             </ul>
-            <b># 데려오기 전 필수 준비물</b>
+            <h2># 데려오기 전 필수 준비물</h2>
                 <p class="text">-----가족이 되는 첫걸음-----</p>
               <ul>
                 <li>식기와 사료</li>
