--- a/info.html
+++ b/info.html
@@ -29,7 +29,8 @@
     <hr>
     <div>
         <h3>인간의 오랜 친구, <strong id="dog">강아지</strong></h3>
-        
+
+          <div class="dog">
             <h2># 입양 전 체크리스트</h2>
             <ul>
                 <li>어떤 변화에도 끝까지 책임질 각오가 있나요?</li>
@@ -39,6 +40,8 @@
                 <li>강아지의 특성과 생활 습관을 고려한 선택인가요?</li>
                 <li>가족이 모두 동의한 입양인가요?</li> 
             </ul>
+          </div>
+          <div class="dog">
             <h2># 데려오기 전 필수 준비물</h2>
                 <p class="text">-----가족이 되는 첫걸음-----</p>
               <ul>
@@ -71,6 +74,8 @@
                 <li>칫솔과 치약</li>
                 <li>물티슈</li>
               </ul>
+            </div>
+            <div class="dog">
             <b># 강아지와 함께 살기</b>
             <ol>
                 <li>독이 되는 음식</li>
@@ -94,6 +99,7 @@
                 <li>함께하는데 드는 비용</li>
                 <li>건강관리와 예방접종</li>
             </ol>
+          </div>
     </div>
     <div>
         <h3>도도한 매력이 사랑스러운, <strong id="cat">고양이</strong></h3>
