--- a/info.html
+++ b/info.html
@@ -30,7 +30,7 @@
     <div>
         <h3>인간의 오랜 친구, <strong id="dog">강아지</strong></h3>
 
-          <div>
+          <div class="dog">
             <h2># 입양 전 체크리스트</h2>
             <ul>
                 <li>어떤 변화에도 끝까지 책임질 각오가 있나요?</li>
@@ -41,7 +41,7 @@
                 <li>가족이 모두 동의한 입양인가요?</li> 
             </ul>
           </div>
-          <div>
+          <div class="dog">
             <h2># 데려오기 전 필수 준비물</h2>
                 <p class="text">-----가족이 되는 첫걸음-----</p>
               <ul>
@@ -130,7 +130,7 @@
                 </li>
               </ul>
             </div>
-            <div>
+            <div class="dog">
             <b># 강아지와 함께 살기</b>
             <ol>
                 <li>독이 되는 음식</li>
