--- a/info.html
+++ b/info.html
@@ -106,7 +106,7 @@
                   <label for="tissue">물티슈</label>
             </div>
             
-            <b># 강아지와 함께 살기</b>
+            <h2># 강아지와 함께 살기</h2>
             <div class="dog">
             <ol>
                 <li>독이 되는 음식</li>
