--- a/index.html
+++ b/index.html
@@ -41,11 +41,15 @@
     <h2>이번주 이슈정보</h2>
     <div class="issue-box">
       <div class="related">
-        <img src="https://" alt="이미지">
+        <img src="https://wimg.heraldcorp.com/news/cms/2025/04/26/news-p.v1.20250426.aced3886ffc346428509a40a1b6bdeec_P1.jpg" alt="이미지">
       </div>
       <div class="issue-content">
-        <h3>제목</h3>
-        <p>내용</p>
+        <h3>“애견카페에 강아지랑 있으면 불법?” 황당 그 자체…이제야 바뀐다</h3>
+        <p style="text-overflow: ellipsis">반려동물을 키우는 인구가 급증하면서 이젠 어디에서나 쉽게 반려카페를 발견할 수 있다.
+          하지만 이들 대부분 불법 영업이었다는 사실. 식품위생법 시행규칙상 카페나 음식점에선 동물을 별도 공간에 분리해야 하기 때문이다.
+          반려카페이지만 정작 반려동물과 함께 있으면 불법이 되는, 황당한 현실이었다.
+          이제부턴 이 같은 규제가 대폭 완화된다. 규제샌드박스 시범사업을 거친 결과다. 반려동물을 키우는 이들에겐 크게 반길 소식이다.
+          식품의약품안전처는 최근 음식점에 반려동물 출입을 허용하는 근거를 만들고 반려동물 동반출입 음식점의 위생·안전관리 기준 등을 신설하는 내용의 ‘식품위생법 시행규칙’ 일부개정안을 입법예고했다.</p>
       </div>
     </div>
   </section>
