--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <h2>이번주 이슈정보</h2>
     <div class="issue-box">
       <div class="related">
-        <img src="https://wimg.heraldcorp.com/news/cms/2025/04/26/news-p.v1.20250426.aced3886ffc346428509a40a1b6bdeec_P1.jpg" alt="이미지">
+        <img src="https://wimg.heraldcorp.com/news/cms/2025/04/26/news-p.v1.20250426.aced3886ffc346428509a40a1b6bdeec_P1.jpg" alt="이미지" style="width:50px height:50px">
       </div>
       <div class="issue-content">
         <h3>“애견카페에 강아지랑 있으면 불법?” 황당 그 자체…이제야 바뀐다</h3>
