--- a/community_dog.html
+++ b/community_dog.html
@@ -2,10 +2,11 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>강아지 커뮤니티 - Pet in Pocket</title>
+  <title>강아지 커뮤니티</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="community.css" />
   <script defer src="community.js"></script>
+  <script src="auth.js" defer></script>
   <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
 </head>
 <body>
