--- a/adopt.html
+++ b/adopt.html
@@ -39,6 +39,6 @@
   <footer>
     <p>Copyright © Pet in Pocket</p>
   </footer>
-  script src="adopt.js"></script>
+ <script src="adopt.js"></script>
 </body>
 </html>
