--- a/share.html
+++ b/share.html
@@ -37,6 +37,8 @@
       <option value="dog">강아지 🐶</option>
       <option value="cat">고양이 🐱</option>
     </select>
+
+     <button id="share-btn">+ 나눔하기</button>
   </div>
 
   <!-- 섹션 -->
