--- a/share.html
+++ b/share.html
@@ -72,6 +72,17 @@
     <button class="more-btn" data-category="etc" data-action="expand">더보기</button>
   </section>
 
+  <!-- 모달창 HTML (맨 아래에) -->
+<div id="upload-modal" class="modal hidden">
+  <div class="modal-content">
+    <h3>새 나눔 등록</h3>
+    <input type="text" placeholder="제목 입력" />
+    <input type="file" />
+    <button>등록</button>
+  </div>
+</div>
+
+
 
   <script src="share.js" defer></script>
 </body>
