--- a/share.html
+++ b/share.html
@@ -72,15 +72,16 @@
     <button class="more-btn" data-category="etc" data-action="expand">더보기</button>
   </section>
 
-  <!-- 모달창 HTML (맨 아래에) -->
-<div id="upload-modal" class="modal hidden">
+  <div id="upload-modal" class="modal hidden">
   <div class="modal-content">
+    <span class="close-btn">&times;</span> <!-- 닫기 버튼 -->
     <h3>새 나눔 등록</h3>
     <input type="text" placeholder="제목 입력" />
     <input type="file" />
     <button>등록</button>
   </div>
 </div>
+
 
 <!-- HTML 하단에 직접 자바스크립트 작성 -->
 <script>
