--- a/index.html
+++ b/index.html
@@ -1,3 +1,41 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>펫인포켓(Pet in Pocket)</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="auth.js" defer></script>
+  <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
+
+</head>
+<body>
+  <header>
+    <h1><a href="index.html">Pet in Pocket</a></h1>
+    <div class="auth">
+      <a href="#">로그인</a>
+      <a href="#">회원가입</a>
+    </div>
+  </header>
+  
+  <nav>
+    <a href="info.html"> 정보제공</a>
+    <a href="community_category.html"> 커뮤니티</a>
+    <a href="adopt.html"> 유기견/묘 입양</a>
+    <a href="share.html"> 물품 나눔</a>
+    
+
+  </nav>
+
+  
+  <section class="text-overlay-section">
+    <img src="https://images.unsplash.com/photo-1623387641168-d9803ddd3f35?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="이미지">
+    <div class="section-text">
+      <div id="typing-text" class="typing-effect"></div>
+    </div>
+  </section>
+  
+
   <section class="issue">
     <h2>이번주 이슈정보</h2>
     <div class="issue-box">
@@ -54,3 +92,26 @@
       </div>
     </div>
   </section>
+
+  <section class="rescues">
+    <h2>유기견/묘 입양구조홍보</h2>
+    <div class="rescue-box">
+      <div class="rescue-item">
+        <img src="https://" alt="유기견">
+        <p>이름:<br>내용</p>
+      </div>
+      <div class="rescue-item">
+        <img src="https://" alt="유기묘">
+        <p>이름: <br>내용</p>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <p>
+      이용약관 | 개인정보처리방침 | 팀정보 | 이메일: | 고객센터: 1234-5678
+    </p>
+  </footer>
+  <script src="script.js"></script>
+</body>
+</html>
