--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <header>
     <h1><a href="index.html">Pet in Pocket</a></h1>
     <div class="auth">
-      <a href="login.html">로그인</a>
-      <a href="signup.html">회원가입</a>
+      <a href="#">로그인</a>
+      <a href="#">회원가입</a>
     </div>
   </header>
   
@@ -92,20 +92,90 @@
       </div>
     </div>
   </section>
-
+  
+  <div class="main-sections">
   <section class="rescues">
     <h2>유기견/묘 입양구조홍보</h2>
     <div class="rescue-box">
       <div class="rescue-item">
-        <img src="https://" alt="유기견">
-        <p>이름:<br>내용</p>
+        <div class="animal-card" onclick="location.href='adopt_detail.html?id=dog11'">
+            <img src="https://images.unsplash.com/photo-1605244863941-3a3ed921c60d?q=80&amp;w=2940&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="보리">
+            <div class="info">
+              <span class="badge">보호중</span>
+              <p>[강아지] 보리 | 2살<br>
+              🐾 여아 · O<br>
+              지역 : 부산</p>
+            </div>
+          </div>
       </div>
       <div class="rescue-item">
-        <img src="https://" alt="유기묘">
-        <p>이름: <br>내용</p>
+          <div class="animal-card" onclick="location.href='adopt_detail.html?id=dog12'">
+            <img src="https://images.unsplash.com/photo-1528919632209-de1db1493d97?q=80&amp;w=2940&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="행운이">
+            <div class="info">
+              <span class="badge">보호중</span>
+              <p>[강아지] 행운이 | 1살<br>
+              🐾 남아 · 예정<br>
+              지역 : 대전</p>
+            </div>
+          </div>
       </div>
-    </div>
+      <br><br>
+      <div class="rescue-item">
+          <div class="animal-card" onclick="location.href='adopt_detail.html?id=cat12'">
+            <img src="https://images.unsplash.com/photo-1612174340967-c5186e69344f?w=900&amp;auto=format&amp;fit=crop&amp;q=60&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8JUVDJThBJUE0JUVDJUJEJTk0JUVEJThCJUIwJUVDJThCJTlDJTIwJUVEJThGJUI0JUVCJTkzJTlDfGVufDB8fDB8fHww" alt="망고">
+            <div class="info">
+              <span class="badge">보호중</span>
+              <p>[고양이] 망고 | 6개월<br>
+              🐾 남아 · X<br>
+              지역 : 경기</p>
+            </div>
+          </div>
+          </div>
+          <div class="rescue-item">
+          <div class="animal-card" onclick="location.href='adopt_detail.html?id=dog13'">
+            <img src="https://images.unsplash.com/photo-1587539975099-5aecb74902d4?q=80&amp;w=3174&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="초코">
+            <div class="info">
+              <span class="badge">보호중</span>
+              <p>[강아지] 초코 | 4살<br>
+              🐾 남아 · O<br>
+              지역 : 인천</p>
+            </div>
+          </div>
+        </div>
   </section>
+
+  <section class="hotpost">
+    <h2>이번주 인기 게시물</h2>
+    <div class="hotpost-box">
+      <div class="posting">
+        <h3>강아지 커뮤니티</h3>
+        <ul>
+            <li><a href="#">저희집 어르신이랑 여행 다녀왔어요ㅎㅎ</a></li>
+            <li><a href="#">강아지랑 지하철 타실 때 다들 어떻게 하나요?</a></li>
+        </ul>
+      </div>
+        <div class="posting">
+        <h3>고양이 커뮤니티</h3>
+        <ul>
+            <li><a href="#">쇼콧 입양 후기</a></li>
+        </ul>
+        </div>
+        <div class="posting">
+        <h3>꿀팁 공유방</h3>
+        <ul>
+            <p>현재 게시물이 없습니다.</p>
+        </ul>
+        </div>
+        <div class="posting">
+        <h3>자유게시판</h3>
+        <ul>
+            <li><a href="#">게시판 이용 규칙 정리!!</a></li>
+        </ul>
+        </div>
+        </div>
+      </div>
+      </section>
+    </div>
 
   <footer>
     <p>
