--- a/info.html
+++ b/info.html
@@ -24,6 +24,7 @@
 
   <main>
     <h1><a href="#dog">강아지</a>🐶를 키울 예정이에요&nbsp;&nbsp;&nbsp;<a href="#cat">고양이</a>🐱를 키울 예정이에요</h1>
+    <p style="font-size: 0.9em; margin-top: 0;">글자를 누르면 해당 페이지로 스크롤됩니다.</p>
     <br>
     <br>
     <hr>
@@ -158,7 +159,7 @@
                   <li>미용비</li>
                   <li>기타 소모품</li>
                 </ul>
-                <p>한 달간 약 16만 6000원 소모(출처: 농림축산식품부 "2023년 동물복지에 대한 국민 의식 조사", 2024.01.16.)</p>
+                <p>"한 달간 약 16만 6000원 소모"</p>
               </div>
             </ol>
             </div>
@@ -273,10 +274,18 @@
                   <li>미용비</li>
                   <li>기타 소모품</li>
                 </ul>
-                <p>한 달간 약 11만3000원 소모(출처: 농림축산식품부 "2023년 동물복지에 대한 국민 의식 조사", 2024.01.16.)</p>
+                <p>"한 달간 약 11만3000원 소모"</p>
               </div>
             </ol>
             </div>
+      <div class="from" style="background-color: #fff3e0;">
+    <p>정보 출처</p><br>
+    <p>농림축산식품부 "2023년 동물복지에 대한 국민 의식 조사" 2024.01.16.</p>
+    <p>ROYAL CANIN https://www.royalcanin.com/kr</p>
+    <p>수의사 설채현 공식 유튜브 https://youtu.be/bl4yx6Hkcvc?si=YYodo2_yiNZNMd8T</p>
+    <p>비엔동물전문의료센터 공식 유튜브 - 수의사 김보윤 https://youtu.be/JtiwVQot6sk?si=siDlZmD7ZOzgGesj</p>
+    <p>한국동물보호협회 https://www.koreananimalshelter.org</p>
+    </div>
   </main>
 
   <footer>
